Make first body row of table white
Make sure that all <table> content is in <tbody>
or <thead> for proper :nth-child selectors.

--- a/cw_common.css
+++ b/cw_common.css
@@ -79,6 +79,6 @@ select option {
 	background: var(--color-blue);
 }
 
-.cwtable tr:nth-child(odd) {
+.cwtable tr:nth-child(even) {
 	background: var(--color-light-grey);
 }
