--- a/cw_common.css
+++ b/cw_common.css
@@ -4,9 +4,11 @@
 
 :root {
 	--color-blue: #7bc5ff;
-	--color-red: #ff0000;
+	--color-red: #ee0000;
 	--color-light-grey: #e0e0e0;
 	--color-dark-grey: #383838;
+	--color-diff-new: orange;
+	--color-diff-old: var(--color-blue);
 }
 
 body {
@@ -16,6 +18,22 @@ body {
 .plainLink {
 	color: inherit;
 	text-decoration: inherit;
+}
+
+.diffOld {
+	background: var(--color-diff-old);
+	border: 1px solid var(--color-diff-old);
+	border-radius: 0.5em;
+	padding-left: 0.1em;
+	padding-right: 0.1em;
+}
+
+.diffNew {
+	background: var(--color-diff-new);
+	border: 1px solid var(--color-diff-new);
+	border-radius: 0.5em;
+	padding-left: 0.1em;
+	padding-right: 0.1em;
 }
 
 /*
